<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Complete Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="button1">Start Menu Demo </string>
	<string name="button2">Start Form Demo </string>
	<string name="button3">Start Resource Demo </string>
	<string name="button4">Start Fragment Demo </string>
	<string name="button5">Start Design Demo </string>
	<string name="button6">Start ActionBar Demo </string>

    <string name="frag_label1">Safe Search:</string>
    <string name="frag_label2">Includes:</string>
    <string name="frag_label3">Must include:</string>
    <string name="frag_label4">Does not include:</string>
    
	<string name="frag_hint1">This is the regular search string</string>
	<string name="frag_hint2">The result must include this word/phrase</string>
	<string name="frag_hint3">The result must not include this word/phrase</string>
	
	<string name="frag_button_text">Start Search</string>
</resources>
