<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

			
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	>
    
		<TextView
			android:id="@+id/safe_label"
 	   		android:text="@string/frag_label1"
 	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
    	/>    
		<ToggleButton
   			android:id="@+id/safe_toggle"
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
		/>

	</LinearLayout>		
	
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/frag_label2"
	    />
	    
	    <EditText
	        android:id="@+id/simple_string"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/frag_hint1"
	    	android:inputType="text"
	    />
	    

	    
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/frag_label3"
	    />
	    
	    <EditText
	        android:id="@+id/mandatory_string"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/frag_hint2"
	    	android:inputType="text"
	    />
	    
	

	    
	    <TextView	
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/frag_label4"
	    />
	    
	    <EditText
	        android:id="@+id/excluded_string"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/frag_hint3"
	    	android:inputType="text"
	    />
	    

	<Button 
	    	android:id="@+id/search_button"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/frag_button_text"
	    	android:onClick="startSearch"
	    />
    
</LinearLayout>
